# MCP

./: client.py  main.py  math_client.py  math_server.py  pyproject.toml
